--- a/index.html
+++ b/index.html
@@ -7,19 +7,27 @@
     <title>That Portfolio Though</title>
 </head>
 <header>Isimemen Inegbedion</header>
-<h1>About Me</h1>
-<p>Hello, My name is Isimemen Inegbedion. I am a Nigerian blood American born and raised in Atlanta, GA.
-My life has been quite the journey so far when it comes to an education standpoint. I originally went to college
-to work in the field of Psychology. It took me to get to my senior year before I came to the conclusion that my life should not 
-continue towards that path. Enter the Accounting portion of my life. I immediately enrolled back into college to pursue a degree in Accounting.
-It took slightly longer than I wanted to graduate but I was able to obtain my BBA in Accounting and start my career. 
-</p>
-<p>
-Three years into my career in the Accounting field I found myself at a crossroads. In order to advance my career in Accounting I would need to obtain my CPA
-as well as enrolling in grad school. Two things I have no real interest in pursueing. While consulting with some close friends on what I should do with my life I was introduced to
-IT and web development. I decided to take the plunge and now Im here. Eager to learn and upgrade my life.
-</p>
+<div class="Links"
+<a href="index.html">About</a>
+<a href="portfolio.html">Portfolio</a>
+<a href="contact.html">Contact</a>
+</div>
+
 <body>
+    <img src="assets/images/My_Face.jpg"
+    <h1>About Me</h1>
+        <p>Hello, My name is Isimemen Inegbedion. I am a Nigerian blood American born and raised in Atlanta, GA.
+        My life has been quite the journey so far when it comes to an education standpoint. I originally went to college
+        to work in the field of Psychology. It took me to get to my senior year before I came to the conclusion that my life should not 
+        continue towards that path. Enter the Accounting portion of my life. I immediately enrolled back into college to pursue a degree in Accounting.
+        It took slightly longer than I wanted to graduate but I was able to obtain my BBA in Accounting and start my career. 
+        </p>
+        <p>
+        Three years into my career in the Accounting field I found myself at a crossroads. In order to advance my career in Accounting I would need to obtain my CPA
+        as well as enrolling in grad school. Two things I have no real interest in pursueing. While consulting with some close friends on what I should do with my life I was introduced to
+        IT and web development. I decided to take the plunge and now Im here. Eager to learn and upgrade my life.
+        </p>
     
 </body>
+<footer>Copyright</footer>
 </html>
