--- a/portfolio.html
+++ b/portfolio.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>That Portfolio Though</title>
 </head>
-<header>Portfolio</header>
+<header>
+    <logo>Isimemen Inegbedion</logo>
+<div class="Links">
+<a href="index.html">About</a>
+<a href="portfolio.html">Portfolio</a>
+<a href="contact.html">Contact</a>
+</div>
+</header>
+</head>
+
 <body>
+    <h1>Portfolio</h1>
+
+<img src="http://lorempixel.com/400/200"/><p>Hangman</p>
+<img src="http://lorempixel.com/400/200"/><p>RPG Game</p>
+<img src="http://lorempixel.com/400/200"/><p>Trivia Game</p>
+<img src="http://lorempixel.com/400/200"/><p>Rutgers Info Widget</p>
+<img src="http://lorempixel.com/400/200"/><p>Rock Paper Scissors</p>
+
     
 </body>
+<footer>Copyright</footer>
 </html>
