--- a/index.html
+++ b/index.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>That Portfolio Though</title>
 </head>
-<header>Isimemen Inegbedion</header>
-<div class="Links"
+<header>
+    <h1>Isimemen Inegbedion</h1>
+<div class="Links">
 <a href="index.html">About</a>
 <a href="portfolio.html">Portfolio</a>
 <a href="contact.html">Contact</a>
 </div>
+</header>
 
 <body>
-    <img src="assets/images/My_Face.jpg"
-    <h1>About Me</h1>
+<h2>About Me</h2>   
+    <img src="assets/images/My_Face.jpg">
+
+    <section>
         <p>Hello, My name is Isimemen Inegbedion. I am a Nigerian blood American born and raised in Atlanta, GA.
         My life has been quite the journey so far when it comes to an education standpoint. I originally went to college
         to work in the field of Psychology. It took me to get to my senior year before I came to the conclusion that my life should not 
@@ -27,7 +32,9 @@
         as well as enrolling in grad school. Two things I have no real interest in pursueing. While consulting with some close friends on what I should do with my life I was introduced to
         IT and web development. I decided to take the plunge and now Im here. Eager to learn and upgrade my life.
         </p>
+    </section>
     
-</body>
 <footer>Copyright</footer>
+</body>
+
 </html>
