--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
     <title>That Portfolio Though</title>
 </head>
 <header>
-    <logo>Isimemen Inegbedion</logo>
+    <h1>Isimemen Inegbedion</h1>
 <div class="Links">
 <a href="index.html">About</a>
 <a href="portfolio.html">Portfolio</a>
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <h1>Portfolio</h1>
+    <h2>Portfolio</h2>
 
 <img src="http://lorempixel.com/400/200"/><p>Hangman</p>
 <img src="http://lorempixel.com/400/200"/><p>RPG Game</p>
@@ -27,6 +27,7 @@
 <img src="http://lorempixel.com/400/200"/><p>Rock Paper Scissors</p>
 
     
-</body>
 <footer>Copyright</footer>
+</body>
+
 </html>
