--- a/contact.html
+++ b/contact.html
@@ -1,14 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>That Portfolio Though</title>
 </head>
-<header>Contact</header>
+<header>
+    <h1>Isimemen Inegbedion</h1>
+<div class="Links">
+<a href="index.html">About</a>
+<a href="portfolio.html">Portfolio</a>
+<a href="contact.html">Contact</a>
+</div>
+</header>
+</head>
 <body>
+
+<div class="Message">
+    <h2>Contact</h2>
+<form>
+    Name
+    <br>
+    <input type="text">
+    <br>
+    Email
+    <br>
+    <input type="email">
+    <br>
+    Message
+    <br>
+    <input type="text">
+    <br>
+<button>Submit</button>
+</form>
+</div>
     
-</body>
 <footer>Copyright</footer>
+</body>
 </html>
