--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <meta charset="UTF-8">
@@ -7,6 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>That Portfolio Though</title>
 </head>
+<div class="Whole">
 <header>
     <h1>Isimemen Inegbedion</h1>
 <div class="Links">
@@ -17,9 +19,10 @@
 </header>
 </head>
 <body>
-
+<div class="content"></div>
 <div class="Message">
     <h2>Contact</h2>
+<hr>
 <form>
     Name
     <br>
@@ -36,7 +39,9 @@
 <button>Submit</button>
 </form>
 </div>
+</div>
     
-<footer>Copyright</footer>
+<footer class="footer">Copyright</footer>
 </body>
+</div>
 </html>
