--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>That Portfolio Though</title>
 </head>
+
+<div class="Whole">
 <header>
     <h1>Isimemen Inegbedion</h1>
 <div class="Links">
@@ -17,8 +19,10 @@
 </header>
 
 <body>
+<div class="AboutMe">
 <h2>About Me</h2>   
-    <img src="assets/images/My_Face.jpg">
+<hr>
+<img src="assets/images/My_Face.jpg">
 
     <section>
         <p>Hello, My name is Isimemen Inegbedion. I am a Nigerian blood American born and raised in Atlanta, GA.
@@ -33,8 +37,10 @@
         IT and web development. I decided to take the plunge and now Im here. Eager to learn and upgrade my life.
         </p>
     </section>
+</div>
     
 <footer>Copyright</footer>
 </body>
+</div>
 
 </html>
