--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>That Portfolio Though</title>
 </head>
+<div class="Whole">
 <header>
     <h1>Isimemen Inegbedion</h1>
 <div class="Links">
@@ -19,15 +20,22 @@
 
 <body>
     <h2>Portfolio</h2>
+<hr>
 
-<img src="http://lorempixel.com/400/200"/><p>Hangman</p>
-<img src="http://lorempixel.com/400/200"/><p>RPG Game</p>
-<img src="http://lorempixel.com/400/200"/><p>Trivia Game</p>
-<img src="http://lorempixel.com/400/200"/><p>Rutgers Info Widget</p>
-<img src="http://lorempixel.com/400/200"/><p>Rock Paper Scissors</p>
+<img class="bottom-center">
+<img src="assets/images/placeholder1.jpg">Hangman</img>
+<img src="assets/images/placeholder2.jpg">RPG Game</img>
+<img src="assets/images/placeholder3.jpg">Trivia Game</img>
+<img src="assets/images/placeholder4.jpg">Rutgers Info Widget</img>
+<img src="assets/images/placeholder6.jpg">Rock Paper Scissors</img>
+</img>
+
+</div>
 
     
 <footer>Copyright</footer>
 </body>
+
+</div>
 
 </html>
