--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <meta charset="UTF-8">
@@ -8,7 +9,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>That Portfolio Though</title>
 </head>
-<div class="Whole">
+
+<body>
+    
 <header>
     <h1>Isimemen Inegbedion</h1>
 <div class="Links">
@@ -18,8 +21,8 @@
 </div>
 </header>
 </head>
-<body>
-<div class="content"></div>
+
+<div class="content">
 <div class="Message">
     <h2>Contact</h2>
 <hr>
@@ -43,5 +46,4 @@
     
 <footer class="footer">Copyright</footer>
 </body>
-</div>
 </html>
