--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>That Portfolio Though</title>
 </head>
-<div class="Whole">
+
+<body>
+
 <header>
     <h1>Isimemen Inegbedion</h1>
 <div class="Links">
@@ -16,26 +18,25 @@
 <a href="contact.html">Contact</a>
 </div>
 </header>
-</head>
 
-<body>
+<div class="content">
+
+<div class="AboutMe">
     <h2>Portfolio</h2>
 <hr>
 
-<img class="bottom-center">
-<img src="assets/images/placeholder1.jpg">Hangman</img>
-<img src="assets/images/placeholder2.jpg">RPG Game</img>
-<img src="assets/images/placeholder3.jpg">Trivia Game</img>
-<img src="assets/images/placeholder4.jpg">Rutgers Info Widget</img>
-<img src="assets/images/placeholder6.jpg">Rock Paper Scissors</img>
-</img>
+<img src="assets/images/placeholder1.jpg"> 
+<img src="assets/images/placeholder2.jpg"> 
+<img src="assets/images/placeholder3.jpg"> 
+<img src="assets/images/placeholder4.jpg"> 
+<img src="assets/images/placeholder6.jpg"> 
 
 </div>
 
-    
-<footer>Copyright</footer>
+</div>
+
+<footer class="footer">Copyright</footer>
 </body>
 
-</div>
 
 </html>
