--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>That Portfolio Though</title>
 </head>
+<body>
 
-<div class="Whole">
 <header>
     <h1>Isimemen Inegbedion</h1>
 <div class="Links">
-<a href="index.html">About</a>
-<a href="portfolio.html">Portfolio</a>
+<a href="index.html">About</a> | 
+<a href="portfolio.html">Portfolio</a> |
 <a href="contact.html">Contact</a>
 </div>
 </header>
+<div class="content">
 
-<body>
 <div class="AboutMe">
 <h2>About Me</h2>   
 <hr>
@@ -26,21 +26,20 @@
 
     <section>
         <p>Hello, My name is Isimemen Inegbedion. I am a Nigerian blood American born and raised in Atlanta, GA.
-        My life has been quite the journey so far when it comes to an education standpoint. I originally went to college
-        to work in the field of Psychology. It took me to get to my senior year before I came to the conclusion that my life should not 
-        continue towards that path. Enter the Accounting portion of my life. I immediately enrolled back into college to pursue a degree in Accounting.
-        It took slightly longer than I wanted to graduate but I was able to obtain my BBA in Accounting and start my career. 
+        My life has been quite the journey so far when it comes to education. I originally went to college
+        to work in the field of Psychology. It took for me to get to my senior year before I came to the conclusion that my life should not 
+        continue towards that path. I took an intro to Accounting course in my senior year and figured Accounting was not a bad career to pursue. I immediately enrolled back into college to pursue a degree in Accounting.
+        It took slightly longer than I anticipated to graduate but I was able to obtain my BBA in Accounting and start my career. 
         </p>
         <p>
-        Three years into my career in the Accounting field I found myself at a crossroads. In order to advance my career in Accounting I would need to obtain my CPA
+        Three years into my career in the Accounting field I found myself at a crossroads. In order to advance my career I would need to obtain my CPA
         as well as enrolling in grad school. Two things I have no real interest in pursueing. While consulting with some close friends on what I should do with my life I was introduced to
-        IT and web development. I decided to take the plunge and now Im here. Eager to learn and upgrade my life.
+        IT and web development. I decided to take the plunge and now i am here. At this moment I am very eager to learn and upgrade my life.
         </p>
     </section>
 </div>
-    
-<footer>Copyright</footer>
-</body>
 </div>
+<footer class="footer">Copyright</footer>
+</body>
 
 </html>
