Even more updates

--- a/contact.html
+++ b/contact.html
@@ -15,9 +15,9 @@
 <header>
     <h1>Isimemen Inegbedion</h1>
 <div class="Links">
-<a href="index.html">About</a>
-<a href="portfolio.html">Portfolio</a>
-<a href="contact.html">Contact</a>
+<a href="index.html">About</a> |
+<a href="portfolio.html">Portfolio</a> |
+<a href="contact.html">Contact</a> 
 </div>
 </header>
 </head>
@@ -37,8 +37,10 @@
     <br>
     Message
     <br>
-    <input type="text">
+    <textarea>Say something...</textarea>
     <br>
+</br>
+
 <button>Submit</button>
 </form>
 </div>
