Almost at the goal line

--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
 <div class="AboutMe">
 <h2>About Me</h2>   
 <hr>
-<img src="assets/images/My_Face.jpg">
+<img id="MyFace" src="assets/images/My_Face.jpg">
 
-    <section>
         <p>Hello, My name is Isimemen Inegbedion. I am a Nigerian blood American born and raised in Atlanta, GA.
         My life has been quite the journey so far when it comes to education. I originally went to college
         to work in the field of Psychology. It took for me to get to my senior year before I came to the conclusion that my life should not 
@@ -36,7 +35,7 @@
         as well as enrolling in grad school. Two things I have no real interest in pursueing. While consulting with some close friends on what I should do with my life I was introduced to
         IT and web development. I decided to take the plunge and now i am here. At this moment I am very eager to learn and upgrade my life.
         </p>
-    </section>
+
 </div>
 </div>
 <footer class="footer">Copyright</footer>
