--- a/portfolio.html
+++ b/portfolio.html
@@ -13,26 +13,29 @@
 <header>
     <h1>Isimemen Inegbedion</h1>
 <div class="Links">
-<a href="index.html">About</a>
-<a href="portfolio.html">Portfolio</a>
+<a href="index.html">About</a> |
+<a href="portfolio.html">Portfolio</a> |
 <a href="contact.html">Contact</a>
 </div>
 </header>
 
 <div class="content">
-
 <div class="AboutMe">
+    
     <h2>Portfolio</h2>
 <hr>
-
-<img src="assets/images/placeholder1.jpg"> 
-<img src="assets/images/placeholder2.jpg"> 
-<img src="assets/images/placeholder3.jpg"> 
-<img src="assets/images/placeholder4.jpg"> 
-<img src="assets/images/placeholder6.jpg"> 
-
+ 
+<div class="container">
+<img src="assets/images/placeholder1.jpg"><button class="btn">Hangman</button></div>
+<div class="container">
+<img src="assets/images/placeholder2.jpg"><button class="btn">RPG Game</button></div>
+<div class="container">
+<img src="assets/images/placeholder3.jpg"><button class="btn">Trivia Game</button></div>
+<div class="container">
+<img src="assets/images/placeholder4.jpg"><button class="btn">Rutgers Info Widget</button></div>
+<div class="container">
+<img src="assets/images/placeholder6.jpg"><button class="btn">Rock Paper Scissors</button></div>
 </div>
-
 </div>
 
 <footer class="footer">Copyright</footer>
