--- a/index.html
+++ b/index.html
@@ -27,13 +27,14 @@
         <p>Hello, My name is Isimemen Inegbedion. I am a Nigerian blood American born and raised in Atlanta, GA.
         My life has been quite the journey so far when it comes to education. I originally went to college
         to work in the field of Psychology. It took for me to get to my senior year before I came to the conclusion that my life should not 
-        continue towards that path. I took an intro to Accounting course in my senior year and figured Accounting was not a bad career to pursue. I immediately enrolled back into college to pursue a degree in Accounting.
+        continue towards that path. I took an intro to Accounting course in my senior year and figured Accounting was not a bad career to pursue. 
+        I immediately enrolled back into college to pursue a degree in Accounting.
         It took slightly longer than I anticipated to graduate but I was able to obtain my BBA in Accounting and start my career. 
         </p>
         <p>
         Three years into my career in the Accounting field I found myself at a crossroads. In order to advance my career I would need to obtain my CPA
-        as well as enrolling in grad school. Two things I have no real interest in pursueing. While consulting with some close friends on what I should do with my life I was introduced to
-        IT and web development. I decided to take the plunge and now i am here. At this moment I am very eager to learn and upgrade my life.
+        as well as enrolling in grad school, two things I have no real interest in pursueing. While consulting with some close friends on what I should do with my life I was introduced to
+        IT and web development. I decided to take the plunge and now i'm here, very eager to learn and upgrade my life.
         </p>
 
 </div>
